force-app/main/default/objects/TimelineParent__mdt/TimelineParent__mdt.object-meta.xml
<CustomObject>
    <label>Timeline Parent</label>
    <pluralLabel>Timeline Parents</pluralLabel>
</CustomObject>