force-app/main/default/objects/TimelineParent__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to make active</description>
    <inlineHelpText>Check to make active</inlineHelpText>
    <label>Show Data in Timeline</label>
    <type>Checkbox</type>
</CustomField>