force-app/main/default/objects/TimelineParent__mdt/fields/Timeline_Child__c.field-meta.xml
<CustomField>
    <fullName>Timeline_Child__c</fullName>
    <description>The child record to be shown in the timeline</description>
    <inlineHelpText>The child record to be shown in the timeline</inlineHelpText>
    <label>Child Config</label>
    <referenceTo>TimelineChild__mdt</referenceTo>
    <relationshipLabel>Timelines</relationshipLabel>
    <relationshipName>Timelines1</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>